Update representations ui Add progress bar fix text layout of statistics Need to increase gap inside a row and between rows

--- a/static/_sass/_overrides.scss
+++ b/static/_sass/_overrides.scss
@@ -320,4 +320,10 @@ header.section > .container {
   padding: 0rem 1rem 0rem 1rem;
 }
 
+.logo-mix , .logo-mix > svg {
+  height:7rem;
+}
 
+.progress {
+  height:4px;
+}
