--- a/static/_sass/main.scss
+++ b/static/_sass/main.scss
@@ -50,7 +50,7 @@ $navbar-item-color:#b5b5b5;
 
 .footer {
     background-color:#121212;
-    position:absolute;
+    position:fixed;
     bottom:0px;
     width:100%;
     padding:2rem 1.5rem 2rem;
