--- a/static/css/style.css
+++ b/static/css/style.css
@@ -269,7 +269,7 @@ body {
 .statistiques {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: justify;
 }
 /* @media (min-width: 600px) and (max-resolution: 150dpi) {
     .representation {
@@ -281,12 +281,13 @@ body {
         width: 16.6%;
     }
 }
+*/
 .representation .titre {
     margin-right: 10px;
     color: #888;
     font-weight: 200;
 
-} */
+} 
 .legende {
     margin-bottom: 10px;
     display: flex;
@@ -398,8 +399,9 @@ body {
         height: 100%;
     }    
     .legende-moyen-production {
-        width: 25px;
-        height: 25px;
+        width: 18px;
+        height: 18px;
+        margin-bottom: -0.2rem;
     }
     .regroupement-representations {
         padding-left: 20px;
